manifests/infra/oauth2-proxy/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: oauth2
  namespace: monitoring
spec:
  forwardAuth:
    address: https://auth.chofufes2021.gotti.dev/oauth2/auth
