manifests/infra/oauth2-proxy/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: oauth2
  namespace: oauth2-proxy
spec:
  routes:
  - kind: Rule
    match: Host(`auth.chofufes2021.gotti.dev`)
    services:
    - name: oauth2-proxy
      port: 4180
